--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -20,11 +20,43 @@
 				<input type="text" id="addItemInput" placeholder="Add an item to your list...">
 			</div>
 			<div class="large-1 small-1 faire-menu-entry columns">
-				<a href="javascript:alert('CLICK')">
+				<a id="faire-menu-btn">
 					<span class="faire-menu-icon-wrapper">
 						<span class="faire-menu-icon" style=""></span>
 					</span>
-				</a>
+				</a>				
+			</div>
+		</div>
+		<div class="faire-drop-menu">
+			<div class="row">
+				<div class="large-12 small-12 columns">
+					<hr class="uber-divider" />
+				</div>
+			</div>
+			<div class="row faire-task">
+				<div class="large-12 small-12 columns">
+					<a href="#">Menu Item 1</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-12 small-12 columns">
+					<hr />
+				</div>
+			</div>
+			<div class="row faire-task">
+				<div class="large-12 small-12 columns">
+					<a href="#">Menu Item 2</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-12 small-12 columns">
+					<hr />
+				</div>
+			</div>
+			<div class="row faire-task">
+				<div class="large-12 small-12 columns">
+					<a href="#">Menu Item 3</a>
+				</div>
 			</div>
 		</div>
 		<div class="row">
@@ -185,6 +217,7 @@
 
   <script src="js/foundation.min.js"></script>
   <script src="js/vendor/hammer.min.js"></script>
+  <script src="js/faire.js"></script>
   
   <!--
   
