--- a/lib/views/register.html
+++ b/lib/views/register.html
@@ -1,10 +1,51 @@
-<html>
-<head><title>Registration page</title></head><body>
+<!DOCTYPE html>
+<!--[if IE 8]> 				 <html class="no-js lt-ie9" lang="en" > <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Faire Registration</title>
 
-<form method="post" action="/register">
-Email: <input type="text" name="email"><br/>
-Password: <input type="password" name="passwrd"><br/>
-Password Again: <input type="password" placeholder="confirm password" name="passwrd0" id="passwrd0" /><br/>
-<input type="submit" value="Register"></form></body>
+  
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/faire.css">
 
+  <script src="js/vendor/custom.modernizr.js"></script>
+
+</head>
+<body>
+	<div class="row">
+		<div class="large-6 large-centered small-12 columns">
+			<form method="post" action="/register">
+				<div class="row">
+					<div class="large-12 small-12 columns">
+						<fieldset>
+							<legend>Faire Registration</legend>
+							<label>Email:</label>
+							<input type="text" name="email"><br/>
+							<label>Password:</label>
+							<input type="password" name="passwrd"><br/>
+							<label>Password Again:</label>
+							<input type="password" name="passwrd0"><br/>
+							
+							<input type="submit" value="Register" class="button success radius expand" />
+						</fieldset>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+
+  <script>
+  document.write('<script src=' +
+  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
+  '.js><\/script>')
+  </script>
+
+  <script src="js/foundation.min.js"></script>
+
+  <script>
+    $(document).foundation();
+  </script>
+</body>
 </html>
