Angular setup to add tasks.

--- a/lib/views/login.html
+++ b/lib/views/login.html
@@ -26,6 +26,7 @@
 							<label>Password:</label>
 							<input type="password" name="passwrd"><br/>
 							<input type="submit" value="Login" class="button success radius expand" />
+							<h6 class="subheader"><a href="/register">Don't have an account yet? Register here!</a></h6>
 						</fieldset>
 					</div>
 				</div>
