--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!--[if IE 8]> 				 <html class="no-js lt-ie9" lang="en" > <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
+<!--[if IE 8]><html ng-app="handlebarFriendlyApp" class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--><html ng-app class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Faire</title>
 
   
@@ -14,249 +14,101 @@
 
 </head>
 <body>
-	<div data-magellan-expedition="fixed">
-		<div class="row entry-section">
-			<div class="large-11 small-11 faire-entry columns">
-				<input type="text" id="addItemInput" placeholder="Add an item to your list...">
+	<div ng-controller="TaskCtrl">
+		<div data-magellan-expedition="fixed">
+			<div class="row entry-section">
+				<div class="large-11 small-11 faire-entry columns">
+					<form ng-submit="addTask()">
+						<input type="text" id="addItemInput" ng-model="taskName" placeholder="Add an item to your list..." size="50" />
+					</form>
+				</div>
+				<div class="large-1 small-1 faire-menu-entry columns">
+					<a id="faire-menu-btn">
+						<span class="faire-menu-icon-wrapper">
+							<span class="faire-menu-icon" style=""></span>
+						</span>
+					</a>				
+				</div>
 			</div>
-			<div class="large-1 small-1 faire-menu-entry columns">
-				<a id="faire-menu-btn">
-					<span class="faire-menu-icon-wrapper">
-						<span class="faire-menu-icon" style=""></span>
-					</span>
-				</a>				
+			<div class="faire-drop-menu">
+				<div class="row">
+					<div class="large-12 small-12 columns">
+						<hr class="uber-divider" />
+					</div>
+				</div>
+				<div class="row faire-task">
+					<div class="large-12 small-12 columns">
+						<a href="#">Clear Completed Items</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="large-12 small-12 columns">
+						<hr />
+					</div>
+				</div>
+				<div class="row faire-task">
+					<div class="large-12 small-12 columns">
+						<a href="#">Delete List</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="large-12 small-12 columns">
+						<hr />
+					</div>
+				</div>
+				<div class="row faire-task">
+					<div class="large-12 small-12 columns">
+						<a href="/logout">Logout</a>
+					</div>
+				</div>
 			</div>
-		</div>
-		<div class="faire-drop-menu">
 			<div class="row">
 				<div class="large-12 small-12 columns">
 					<hr class="uber-divider" />
 				</div>
 			</div>
-			<div class="row faire-task">
-				<div class="large-12 small-12 columns">
-					<a href="#">Menu Item 1</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="large-12 small-12 columns">
-					<hr />
-				</div>
-			</div>
-			<div class="row faire-task">
-				<div class="large-12 small-12 columns">
-					<a href="#">Menu Item 2</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="large-12 small-12 columns">
-					<hr />
-				</div>
-			</div>
-			<div class="row faire-task">
-				<div class="large-12 small-12 columns">
-					<a href="#">Menu Item 3</a>
-				</div>
-			</div>
 		</div>
-		<div class="row">
-			<div class="large-12 small-12 columns">
-				<hr class="uber-divider" />
+
+		<div ng-cloak id="task-container">
+			<div ng-repeat="task in tasks">
+				<div class="row faire-task">
+					<div class="large-12 small-12 columns">
+						<a href="#">\{{task.name}}</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="large-12 small-12 columns">
+						<hr />
+					</div>
+				</div>
+			</div>
+			<div ng-show="!tasks.length">
+				<div class="row faire-task">
+					<div class="large-12 small-12 columns">
+						No tasks!
+					</div>
+				</div>
+				<div class="row">
+					<div class="large-12 small-12 columns">
+						<hr />
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
+	<script>
+	document.write('<script src=' +
+	('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
+	'.js><\/script>')
+	</script>
 
-	<div id="task-container">
-		<div class="row faire-task">
-			<div class="large-12 small-12 columns">
-				<a href="#">Update copy on i103</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task">
-			<div class="large-12 small-12 columns">
-				<a href="#">Update copy on i104</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task">
-			<div class="large-12 small-12 columns">
-				<a href="#">Eat a very large banana quickly</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task">
-			<div class="large-12 small-12 columns">
-				<a href="#">WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task faire-inactive">
-			<div class="large-12 small-12 columns">
-				<a href="#">test faire more</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task faire-inactive">
-			<div class="large-12 small-12 columns">
-				<a href="#">test faire more</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task faire-inactive">
-			<div class="large-12 small-12 columns">
-				<a href="#">test faire more</a>
-			</div>
-		</div><div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task faire-inactive">
-			<div class="large-12 small-12 columns">
-				<a href="#">test faire more</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task faire-inactive">
-			<div class="large-12 small-12 columns">
-				<a href="#">test faire more</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task faire-inactive">
-			<div class="large-12 small-12 columns">
-				<a href="#">test faire more</a>
-			</div>
-		</div><div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task faire-inactive">
-			<div class="large-12 small-12 columns">
-				<a href="#">test faire more</a>
-			</div>
-		</div><div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task faire-inactive">
-			<div class="large-12 small-12 columns">
-				<a href="#">test faire more</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task faire-inactive">
-			<div class="large-12 small-12 columns">
-				<a href="#">test faire more</a>
-			</div>
-		</div><div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task faire-inactive">
-			<div class="large-12 small-12 columns">
-				<a href="#">test faire more</a>
-			</div>
-		</div><div class="row">
-			<div class="large-12 small-12 columns">
-				<hr />
-			</div>
-		</div>
-		<div class="row faire-task faire-inactive">
-			<div class="large-12 small-12 columns">
-				<a href="#">test faire more</a>
-			</div>
-		</div>
-	</div>
-	
-  <script>
-  document.write('<script src=' +
-  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-  '.js><\/script>')
-  </script>
+	<script src="js/foundation.min.js"></script>
+	<script src="js/vendor/hammer.min.js"></script>
+	<script src="js/vendor/angular.min.js"></script>
+	<script src="js/faire.js"></script>
 
-  <script src="js/foundation.min.js"></script>
-  <script src="js/vendor/hammer.min.js"></script>
-  <script src="js/faire.js"></script>
-  
-  <!--
-  
-  <script src="js/foundation/foundation.js"></script>
-  
-  <script src="js/foundation/foundation.alerts.js"></script>
-  
-  <script src="js/foundation/foundation.clearing.js"></script>
-  
-  <script src="js/foundation/foundation.cookie.js"></script>
-  
-  <script src="js/foundation/foundation.dropdown.js"></script>
-  
-  <script src="js/foundation/foundation.forms.js"></script>
-  
-  <script src="js/foundation/foundation.joyride.js"></script>
-  
-  <script src="js/foundation/foundation.magellan.js"></script>
-  
-  <script src="js/foundation/foundation.orbit.js"></script>
-  
-  <script src="js/foundation/foundation.reveal.js"></script>
-  
-  <script src="js/foundation/foundation.section.js"></script>
-  
-  <script src="js/foundation/foundation.tooltips.js"></script>
-  
-  <script src="js/foundation/foundation.topbar.js"></script>
-  
-  <script src="js/foundation/foundation.interchange.js"></script>
-  
-  <script src="js/foundation/foundation.placeholder.js"></script>
-  
-  <script src="js/foundation/foundation.abide.js"></script>
-  
-  -->
-  
-  <script>
-    $(document).foundation();
-  </script>
+	<script>
+		$(document).foundation();
+	</script>
 </body>
 </html>
