--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -71,7 +71,7 @@
 
 		<div ng-cloak id="task-container">
 			<div ng-repeat="task in tasks">
-				<div class="row faire-task">
+				<div class="row faire-task  \{{task.status}}">
 					<div class="large-12 small-12 columns">
 						<a href="#">\{{task.name}}</a>
 					</div>
