--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -82,7 +82,7 @@
 					</div>
 				</div>
 			</div>
-			<div ng-show="!tasks.length">
+			<div ng-show="hasNoTasks()">
 				<div class="row faire-task">
 					<div class="large-12 small-12 columns">
 						No tasks!
