--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--[if IE 8]><html ng-app="handlebarFriendlyApp" class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--><html ng-app class="no-js" lang="en"> <!--<![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -13,7 +13,7 @@
   <script src="js/vendor/custom.modernizr.js"></script>
 
 </head>
-<body>
+<body ng-app="faireApp">
 	<div ng-controller="TaskCtrl">
 		<div data-magellan-expedition="fixed">
 			<div class="row entry-section">
@@ -71,7 +71,7 @@
 
 		<div ng-cloak id="task-container">
 			<div ng-repeat="(id, task) in tasks">
-				<div class="row faire-task  \{{task.status}}">
+				<div class="row faire-task  \{{task.status}}" ng-swipe-left="editTask(id)">
 					<div class="large-12 small-12 columns">
 						<a ng-click="toggleTask(id)">\{{task.name}}</a>
 					</div>
@@ -103,8 +103,8 @@
 	</script>
 
 	<script src="js/foundation.min.js"></script>
-	<script src="js/vendor/hammer.min.js"></script>
 	<script src="js/vendor/angular.min.js"></script>
+	<script src="js/vendor/angular-touch.min.js"></script>
 	<script src="js/faire.js"></script>
 
 	<script>
