--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -70,10 +70,10 @@
 		</div>
 
 		<div ng-cloak id="task-container">
-			<div ng-repeat="(id, task) in tasks">
-				<div class="row faire-task  \{{task.status}}" ng-swipe-left="editTask(id)">
+			<div ng-repeat="task in tasks | orderBy:'updatedAt'">
+				<div class="row faire-task  \{{task.status}}" ng-swipe-left="editTask(task.id)">
 					<div class="large-12 small-12 columns">
-						<a ng-click="toggleTask(id)">\{{task.name}}</a>
+						<a ng-click="toggleTask(task.id)">\{{task.name}} - \{{task.updatedAt}}</a>
 					</div>
 				</div>
 				<div class="row">
