--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -70,7 +70,7 @@
 		</div>
 
 		<div ng-cloak id="task-container">
-			<div ng-repeat="task in tasks | orderBy:'-updatedAt'">
+			<div ng-repeat="task in tasks | orderBy:'-createdAt'">
 				<div class="row faire-task  \{{task.status}}" ng-swipe-left="editTask(task.id)">
 					<div class="large-12 small-12 columns">
 						<a ng-click="toggleTask(task.id)">\{{task.name}}</a>
