Adds friendly message for registration confirmation. Closes #5

--- a/lib/views/register.html
+++ b/lib/views/register.html
@@ -17,6 +17,7 @@
 	<div class="row">
 		<div class="large-6 large-centered small-12 columns">
 			<form method="post" action="/register">
+				<input type="hidden" name="view" value="true" />
 				<div class="row">
 					<div class="large-12 small-12 columns">
 						<fieldset>
