--- a/lib/views/login.html
+++ b/lib/views/login.html
@@ -34,16 +34,23 @@
 		</div>
 	</div>
 
-  <script>
-  document.write('<script src=' +
-  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-  '.js><\/script>')
-  </script>
+	<script>
+	document.write('<script src=' +
+	('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
+	'.js><\/script>')
+	</script>
 
-  <script src="js/foundation.min.js"></script>
+	<script src="js/foundation.min.js"></script>
+	<script src="js/faire.login.js"></script>
 
-  <script>
-    $(document).foundation();
-  </script>
+	<script>
+		$(document).foundation();
+	</script>
+	<div id="faireLoginModal" class="reveal-modal">
+		<div class="row entry-section">
+			<div class="large-12 small-12 columns" id="faireLoginModalMessage"></div>
+		</div>
+		<a class="close-reveal-modal">&#215;</a>
+	</div>
 </body>
 </html>
