--- a/lib/views/register.html
+++ b/lib/views/register.html
@@ -28,8 +28,8 @@
 							<input type="password" name="passwrd"><br/>
 							<label>Password Again:</label>
 							<input type="password" name="passwrd0"><br/>
-							
 							<input type="submit" value="Register" class="button success radius expand" />
+							<h6 class="subheader"><a href="/login">Already have an account? Login here!</a></h6>
 						</fieldset>
 					</div>
 				</div>
