--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -38,7 +38,7 @@
 				</div>
 				<div class="row faire-task">
 					<div class="large-12 small-12 columns">
-						<a href="#">Clear Completed Items</a>
+						<a ng-click="clearCompletedItems()">Clear Completed Items</a>
 					</div>
 				</div>
 				<div class="row">
