--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -48,7 +48,7 @@
 				</div>
 				<div class="row faire-task">
 					<div class="large-12 small-12 columns">
-						<a href="#">Delete List</a>
+						<a ng-click="deleteTasklist()">Delete List</a>
 					</div>
 				</div>
 				<div class="row">
