Adds in an intuitive edit/delete to the base theme when the screen size is 'large or above' according to foundation 4. Probably should turn these into icons and stylize them. Relevant to #12

--- a/lib/views/themes/default/index.html
+++ b/lib/views/themes/default/index.html
@@ -84,7 +84,7 @@
 				<div class="faire-task  \{{task.status}}">
 					<div class="row actionable" ng-swipe-left="editTask(task.id)" ng-swipe-right="deleteTask(task.id)">
 						<div class="large-12 small-12 columns">
-							<a ng-click="toggleTask(task.id)">\{{task.name}}</a>
+							<a ng-click="toggleTask(task.id)">\{{task.name}}</a><strong class="show-for-large-up"><a ng-click="editTask(task.id)">Edit</a> | <a ng-click="deleteTask(task.id)">Delete</a></strong>
 						</div>
 					</div>
 					<div class="row">
