--- a/lib/views/register.html
+++ b/lib/views/register.html
@@ -36,18 +36,26 @@
 			</form>
 		</div>
 	</div>
+	
+	<div id="faireRegisterModal" class="reveal-modal">
+		<div class="row entry-section">
+			<div class="large-12 small-12 columns" id="faireRegisterModalMessage"></div>
+		</div>
+		<a class="close-reveal-modal">&#215;</a>
+	</div>
 
-  <script>
-  document.write('<script src=' +
-  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-  '.js><\/script>')
-  </script>
-
-  <script src="js/foundation.min.js"></script>
-  <script src="js/faire.register.js"></script>
-
-  <script>
-    $(document).foundation();
-  </script>
+	<script>
+		document.write('<script src=' +
+		('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
+		'.js><\/script>')
+	</script>
+	<script src="js/foundation.min.js"></script>
+	<script src="js/faire.register.js"></script>
+	  
+	<script>
+		$(document).foundation();
+	</script>
+  
+  
 </body>
 </html>
