--- a/lib/views/themes/rachel/index.html
+++ b/lib/views/themes/rachel/index.html
@@ -9,6 +9,7 @@
   
   <link rel="stylesheet" href="rachel/foundation-5.3.1/css/foundation.css">
   <link rel="stylesheet" href="rachel/foundation-5.3.1/css/faire_theme.css">
+  <link rel="stylesheet" href="rachel/foundation-5.3.1/css/foundation-icons.css" />
 
   <script src="rachel/foundation-5.3.1/js/vendor/modernizr.js"></script>
 
@@ -41,8 +42,17 @@
 		<div id="header-search">
 			<form>
 				<div class="row">
-					<div class="small-12 columns no-padding">
+					<div class="medium-4 small-12 columns no-padding">
 						<input type="text" id="search-bar" placeholder="Search Lists ...">
+					</div>
+					<div class="medium-4 small-12 columns no-padding">
+						<select name="sort-lists">
+							<option value="sort-lists" selected>Sort Lists</option>
+							<option value="a-z">A to Z</option>
+							<option value="z-a">Z to A</option>
+							<option value="date-newest">Date: Newest</option>
+							<option value="date-oldest">Date: Oldest</option>
+						</select>
 					</div>
 				</div>	
 			</form>
@@ -56,18 +66,23 @@
 					</ul>	
 				</div>			
 			</div>
+			<div class="row">
+				<div class="small-12 medium-4 large-4 columns">
+					<h1>Create New List <a href="#" class="button-create-list"><i class="step fi-plus size-36"></i></a></h1>	
+				</div>			
+			</div>			
 		</div>
 		
-			<script src="rachel/foundation-5.3.1/js/vendor/jquery.js"></script>
+		<script src="rachel/foundation-5.3.1/js/vendor/jquery.js"></script>
 
-			<script src="rachel/foundation-5.3.1/js/foundation.min.js"></script>
-			<script src="rachel/foundation-5.3.1/js/vendor/angular.min.js"></script>
-			<script src="rachel/foundation-5.3.1/js/vendor/angular-touch.min.js"></script>
-			<script src="rachel/js/faireCtrl.js"></script>
+		<script src="rachel/foundation-5.3.1/js/foundation.min.js"></script>
+		<script src="rachel/foundation-5.3.1/js/vendor/angular.min.js"></script>
+		<script src="rachel/foundation-5.3.1/js/vendor/angular-touch.min.js"></script>
+		<script src="rachel/js/faireCtrl.js"></script>
 
-			<script>
-				$(document).foundation();
-			</script>
+		<script>
+			$(document).foundation();
+		</script>
 	</div>
 </body>
 </html>
