--- a/static/rachel/foundation-5.3.1/css/faire_theme.css
+++ b/static/rachel/foundation-5.3.1/css/faire_theme.css
@@ -114,3 +114,21 @@ ul.individual-lists li{
 	line-height: 35px;
 	border-bottom: 1px solid #dddddd;
 }
+
+/*---List Styles---*/
+
+.button-create-list{
+	color: #2ba6cb;
+	background-color: #fff;
+	padding: 1px 5px 0px 5px;
+	float: right;
+	border: 1px solid #fff;
+	border-radius: 68%;
+	margin-top: -2px;
+}
+
+.button-create-list:hover{
+	background-color: #474747;
+	color: #fff;
+	border: 1px solid #474747;
+}
