--- a/static/rachel/views/list.html
+++ b/static/rachel/views/list.html
@@ -2,30 +2,22 @@
 	<div id="edit-screen-border" class="medium-8 columns" data-equalizer-watch>
 		<div id="edit-screen-content">
 			<h1>{{params.listId}}</h1>
-			<ul class="individual-list-items">
-				<li>
-					<div class="list-item-container">
-						<div class="list-item-text">This is a normal list item</div> 
-						<a title="Edit List"><i class="step fi-pencil size-20"></i></a>
+			<div class="individual-list-items" ng-repeat="task in tasks">
+				<div>
+					<div class="list-item-container" data-equalizer>
+						<div class="list-item-text" data-equalizer-watch><div ng-hide="task.edit">{{task.name}}</div><input ng-show="task.edit" ng-model="task.name" /></div>
+						<a title="Edit List" data-equalizer-watch ng-click="handleEdit(task)"><i class="step fi-pencil size-20"></i></a>				
 					</div>
-				</li>
-				<li>
-					<div class="list-item-container">
-						<div class="list-item-text">This is a suuuuuuuuuuuppper extra extra long long long long long long long long long long list item that needs to be styled</div>
-						<a title="Edit List"><i class="step fi-pencil size-20"></i></a>
+				</div>
+			</div>
+			<div class="individual-list-items">
+				<div>
+					<div class="list-item-container" data-equalizer>
+						<div class="list-item-text" data-equalizer-watch><input ng-model="name" name="list-item" placeholder="Enter List Item Here" type="text"></div>
+						<a title="Save List" ng-click="addTask()" data-equalizer-watch><i class="step fi-check size-20"></i></a>
 					</div>
-				</li>
-				<li>
-					<div class="list-item-container">
-						<div class="list-item-text"><input ng-model="name" name="list-item" placeholder="Enter List Item Here" type="text"></div>
-						<a title="Save List" ng-click="addTask()"><i class="step fi-check size-20"></i></a>
-					</div>
-				</li>
-			</ul>
-			<!--<div class="right">
-				<button class="main-buttons">Save</button>
-				<button class="main-buttons">Delete</button>
-			</div>-->
+				</div>
+			</div>
 		</div>	
 	</div>
 	<div class="medium-4 columns" data-equalizer-watch>
