Refactor a few things to close #16

--- a/static/rachel/views/list.html
+++ b/static/rachel/views/list.html
@@ -1,7 +1,7 @@
 <div class="row" data-equalizer>
 	<div id="edit-screen-border" class="medium-8 columns" data-equalizer-watch>
 		<div id="edit-screen-content">
-			<h1>{{params.listId}}</h1>
+			<h1>{{list.name}}</h1>
 			<div class="individual-list-items" ng-repeat="task in tasks">
 				<div>
 					<div class="list-item-container" data-equalizer>
