--- a/static/rachel/views/list.html
+++ b/static/rachel/views/list.html
@@ -1,5 +1,5 @@
 <div class="row" data-equalizer>
-	<div id="edit-screen-border" class="medium-8 columns" data-equalizer-watch>
+	<div id="edit-screen-border" class="medium-12 columns">
 		<div id="edit-screen-content">
 			<h1>{{list.name}}</h1>
 			<div class="individual-list-items" ng-repeat="task in tasks">
@@ -28,7 +28,7 @@
 			</div>
 		</div>	
 	</div>
-	<div class="medium-4 columns" data-equalizer-watch>
+	<!--<div class="medium-4 columns" data-equalizer-watch>
 		<div id="edit-screen-sidenav">
 			<ul>
 				<li><a href="#">Recent List 1</a></li>
@@ -38,5 +38,5 @@
 			</ul> 
 			<button id="view-all" class="main-buttons">View All</button>
 		</div>
-	</div>
+	</div>-->
 </div>
